# 2023-advent-of-code

./: .gitignore  LICENSE  README.md
aoc/: aoc.opam  dune-project
aoc/lib/aoc01/: aoc01.ml  dune
aoc/lib/aoc02/: aoc02.ml  dune
aoc/lib/aoc03/: aoc03.ml  dune
aoc/lib/aoc04/: aoc04.ml  dune
aoc/lib/aoc05/: aoc05.ml  dune
aoc/lib/aoc06/: aoc06.ml  dune
aoc/lib/aoc07/: aoc07.ml  dune
aoc/lib/aoc08/: aoc08.ml  dune
aoc/lib/aoc09/: aoc09.ml  dune
aoc/lib/aoc10/: aoc10.ml  dune
aoc/lib/aoc11/: aoc11.ml  dune
aoc/lib/aoc12/: aoc12.ml  dune
aoc/resources/aoc02/: example.input  test.input
aoc/resources/aoc07/: all_kinds.input
aoc_1/: dune-project
aoc_1/lib/: dune
