(lang dune 3.12)

(name aoc)

(generate_opam_files true)

(source
 (github ancantus/2023-advent-of-code))

(authors "Ryan Estep")

(maintainers "Ryan Estep")

(license MIT)

(package
 (name aoc)
 (synopsis "Advent of Code 2023")
 (description "Advent of Code 2023")
 (depends ocaml dune bigstring)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
